--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         <h3>Sherlock Holmes'ün Maceraları</h3>
         <p>Müəllif: Sir Arthur Conan Doyle</p>
         <p>Qiymət: 9.45 AZN</p>
+        <a href="sherlocholmes.html" class="order-btn">Ətraflı bax</a>
         <button class="order-btn" > <a href="order.html?kitab=Sherlock%20Holmes'ün%20Maceraları">Sifariş et</a></button>
       </div>
       <div class="book"data-category="tarix">
