--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header style="display: flex; align-items: center; gap: 10px;">
+    <a href="index.html" class="logo">
     <img src="logo.png" alt="Bookly Logo"  style="height: 100px;">
     <nav>
         <ul>
